# copilot-citi-cli

./: .gitignore  CLAUDE.md  DEPENDENCY_TREE.md  MICROSERVICES_WORKFLOW_PROMPTS.md  agent_builder.py  agent_export.py  agent_templates.py  build.gradle.kts  copilot_client.py  copilot_config.toml  copilot_mcp.py  platform_utils.py  presentation.md  settings.gradle.kts  setup.sh
agent-builder/: build.gradle.kts  pyproject.toml
agent-builder/src/agent_builder/: __init__.py  __main__.py  export.py  server.py  templates.py
agent-builder/src/agent_builder/static/: api.js  app.js  components.js  index.html  style.css
agent-builder/src/agent_builder/templates/: bdd_qa_tester.toml  bug_fixer.toml  code_reviewer.toml  documentation_writer.toml  full_agent.toml  orchestrator.toml  playwright_bdd_tester.toml  research_agent.toml  speckit_agent.toml
cli/: build.gradle.kts  pyproject.toml
cli/src/copilot_cli/: __init__.py  __main__.py  client.py  config.toml  lsp_bridge.py  mcp.py  mcp_agent.py  orchestrator.py  platform_utils.py  schema_validation.py
cli/src/copilot_cli/library_docs/: __init__.py
cli/src/copilot_cli/tools/: __init__.py  _base.py  apply_patch.py  create_directory.py  create_file.py  fetch_web_page.py  file_search.py  find_test_files.py  get_changed_files.py  get_doc_info.py  get_errors.py  get_library_docs.py  get_project_setup_info.py  github_repo.py  grep_search.py  insert_edit_into_file.py  list_code_usages.py  (+9 more)
speckit-mcp/: build.gradle.kts  pyproject.toml
speckit-mcp/src/speckit_mcp/: __init__.py  __main__.py  resources.py  server.py  tools.py
(+508 files in other folders)
